--- a/src/App.css
+++ b/src/App.css
@@ -10,7 +10,7 @@
 
 .App-header {
   background-color: #282c34;
-  min-height: 100vh;
+  min-height: 10vh;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -23,6 +23,7 @@
   color: #61dafb;
 }
 
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
@@ -30,4 +31,13 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+.heart {
+  width: 80px;
+  margin-bottom: 10px;
+}
+
+li {
+  list-style: none;
 }
