update title based on page

--- a/src/App.css
+++ b/src/App.css
@@ -12,17 +12,17 @@
   background-color: #282c34;
   min-height: 10vh;
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   align-items: center;
-  justify-content: center;
+  justify-content: space-between;
   font-size: calc(10px + 2vmin);
   color: white;
+  padding: 0 20px;
 }
 
 .App-link {
   color: #61dafb;
 }
-
 
 @keyframes App-logo-spin {
   from {
@@ -40,4 +40,10 @@
 
 li {
   list-style: none;
+}
+
+a {
+  color: white;
+  text-decoration: none;
+  margin: 10px;
 }
